--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="lib/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine.html.js"></script>
 
-  <script src="../lib/kache.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/kache.js" type="text/javascript" charset="utf-8"></script>
 
   <script src="../spec/javascripts/kache.spec.js" type="text/javascript" charset="utf-8"></script>
 </head>
