Appends version # to js src in Jasmine test runner.

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,10 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
   <script type="text/javascript" src="lib/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine.html.js"></script>
-
-  <script src="../lib/kache.js" type="text/javascript" charset="utf-8"></script>
-
-  <script src="../spec/javascripts/kache.spec.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/kache.js?0.0.9" type="text/javascript" charset="utf-8"></script>
+  <script src="../spec/javascripts/kache.spec.js?0.0.9" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-
   <script type="text/javascript">
     jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
     jasmine.getEnv().execute();
